--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 
 jdk:
-  - openjdk8
+  - openjdk11
 
 dist: trusty
 
@@ -22,7 +22,7 @@ before_install:
 
 before_script:
   - psql -c "CREATE DATABASE testdb;" -U postgres
-  - psql -c "CREATE USER karl WITH PASSWORD 'karl';" -U postgres
+  - psql -c "CREATE USER \"KARL\" WITH PASSWORD 'KARL';" -U postgres
 
 addons:
   sonarcloud:
