Added support for prometheus

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -85,6 +85,18 @@ management:
   health:
     rabbit:
       enabled: false
+  metrics:
+    web:
+      server:
+        request:
+          autotime:
+            enabled: true
+    export:
+      prometheus:
+        enabled: true
+  info:
+    git:
+      mode: full
 
 logging:
   file:
