--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ owms:
     common:
       tu:
         exchange-name: common.tu.commands
-        routing-key: common.tu.command.removing
+        routing-key: common.tu.command.out.removing
         queue-name: tms-tu-commands-queue
     tms:
       to:
@@ -23,9 +23,6 @@ owms:
         routing-key: to.*
         queue-name: tms-to-commands
   events:
-    common:
-      tu:
-        exchange-name: common.tu
     tms:
       to:
         exchange-name: tms.events
